[tool.poetry]
name = "catgpt"
version = "0.1.0"
description = ""
authors = ["Alex Lambrou <alexander.lambrou@ovationcxm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt5 = "^5.15.9"
pyqt5-tools = "^5.15.9.3.3"
pygame = "^2.5.1"
langchain = "^0.0.268"
tiktoken = "^0.4.0"
openai = "^0.27.8"
black = "^23.7.0"
google-search-results = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
